--- a/[ECLIPSE] Java Project - Tech Talent 2024/spring-mvc-pepito/src/main/webapp/WEB-INF/web.xml
+++ b/[ECLIPSE] Java Project - Tech Talent 2024/spring-mvc-pepito/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
     xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
     version="3.1">
 
-    <display-name>Spring MVC Demo</display-name>
+    <display-name>Spring MVC Pepito</display-name>
 
     <servlet>
         <servlet-name>dispatcher</servlet-name>
